@@ -68,7 +68,6 @@ public class PersonService {
     private final PdlTestdataConsumer pdlTestdataConsumer;
     private final AliasRepository aliasRepository;
     private final ValidateArtifactsService validateArtifactsService;
-    private final GjeldendeService gjeldendeService;
     private final GjeldendeArtifactService gjeldendeArtifactService;
 
     @Transactional
@@ -94,7 +93,7 @@ public class PersonService {
         dbPerson.setEtternavn(extendedArtifacts.getNavn().stream().findFirst().orElse(new NavnDTO()).getEtternavn());
         dbPerson.setSistOppdatert(now());
 
-        gjeldendeArtifactService.setGjeldene(dbPerson.getPerson());
+//        gjeldendeArtifactService.setGjeldene(dbPerson);
 
         return personRepository.save(dbPerson).getIdent();
     }
@@ -111,13 +110,13 @@ public class PersonService {
         var personer = Stream.of(List.of(dbPerson),
                         dbPerson.getRelasjoner().stream()
                                 .map(DbRelasjon::getRelatertPerson)
-                                .collect(Collectors.toList()))
+                                .toList())
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         var identer = personer.stream()
                 .map(DbPerson::getIdent)
-                .collect(Collectors.toList());
+                .toList();
 
         Stream.of(
                         pdlTestdataConsumer.delete(identer),
